--- a/wordpress.yml
+++ b/wordpress.yml
@@ -2,7 +2,7 @@
 - hosts: host1
   become: yes
   roles:
-          #- apache2
-          #- php
-          #- mysql
+          - apache2
+          - php
+          - mysql
           - wordpress
